2006-01-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (MenuConfigure): Fix ActiveTcl Help link when pointing
	to a file with space in path. [Bug 1408425]
	(::tkcon::Save, ::tkcon::Load): in VFS paths, use the X11 dialogs
	that support viewing in VFS dirs.

2005-09-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (::tkcon::AtSource): do not require argv to be defined
	(edit): enable text -undo in editor
	(::tkcon::InitUI): shrink aqua resize control space alloted

2005-07-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: add ::tkcon::OPT(maxlinelen) (default 0 == unlimited)
	and 'tkcon linelength ?value?' to optionally limit long result
	lines.  True result is still captured in $_ (and 'puts $_' works).

2005-05-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (InitMenus): add ActiveTcl Help menu item, if AT Help
	is found.

2005-04-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (ExpandXotcl): allow for xotcl method name expansion,
	if you change ::tkcon::OPT(expandorder) to include Xotcl before
	Procname

2005-02-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (::send::send): propagate -displayof to winfo interps
	call. [Bug 1124369] (mbec)

2004-11-17  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (::tkcon::ExpandVariable): correct array keyname
	expansion. [Bug 1004508] (bold)

2004-11-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (::tkcon::EvalSocket): pass sock arg. (allaert)

2004-11-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (::tkcon::DeleteTab): allow for exit code to be passed
	when exit is aliased to DeleteTab. [Bug 1064462]
	(::tkcon::Expect): graphicsSet isn't valid yet

2004-10-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (::tkcon::Highlight): use ctext for the 'edit' dialog
	if available

2004-07-26  Jeff Hobbs  <jeffh@ActiveState.com>

	**** TKCON 2.4 TAGGED FOR RELEASE ****

	* index.html, docs/*.html: remove email links, update 2.4 info