@@ -1,3 +1,8 @@
+2006-02-28  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkcon.tcl (tkcon): update 'gets stdin' override (tkcon congets)
+	to support usage at script load time. (decoster)
+
 2006-01-25  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkcon.tcl (MenuConfigure): Fix ActiveTcl Help link when pointing
